Responsive fixes on IE

--- a/content/themes/dude/sass/layout/_hero.scss
+++ b/content/themes/dude/sass/layout/_hero.scss
@@ -10,6 +10,18 @@
   background: $color-dude-deep-black;
   color: $color-dude-white;
 
+  @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    @media (max-width: 870px) {
+      height: auto;
+    }
+  }
+
+  @supports (-ms-ime-align: auto) {
+    @media (max-width: 870px) {
+      height: auto;
+    }
+  }
+
   h1 {
     color: $color-dude-white;
     margin-top: 0;
@@ -310,10 +322,20 @@
 
       @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
         width: 50%;
+
+        @media (max-width: 870px) {
+          width: 100%;
+          height: 50rem;
+        }
       }
 
       @supports (-ms-ime-align: auto) {
         width: 50%;
+
+        @media (max-width: 870px) {
+          width: 100%;
+          height: 50rem;
+        }
       }
 
       @media (max-width: 600px) {
@@ -353,6 +375,30 @@
         padding-left: $padding-default-cols-mobile;
         padding-right: $padding-default-cols-mobile;
       }
+
+      @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+        @media (max-width: 870px) {
+          padding-top: 20rem;
+          padding-bottom: 20rem;
+          margin-top: 0;
+          margin-bottom: 0;
+          height: auto;
+          width: 100%;
+          display: block;
+        }
+      }
+
+      @supports (-ms-ime-align: auto) {
+        @media (max-width: 870px) {
+          padding-top: 20rem;
+          padding-bottom: 20rem;
+          margin-top: 0;
+          margin-bottom: 0;
+          height: auto;
+          width: 100%;
+          display: block;
+        }
+      }
     }
 
     h1,
@@ -367,6 +413,26 @@
       opacity: 0;
       transition: all $transition-duration;
       z-index: 4;
+
+      @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+        @media (max-width: 870px) {
+          margin-top: 0;
+          margin-bottom: 0;
+          height: auto;
+          width: 100%;
+          display: block;
+        }
+      }
+
+      @supports (-ms-ime-align: auto) {
+        @media (max-width: 870px) {
+          margin-top: 0;
+          margin-bottom: 0;
+          height: auto;
+          width: 100%;
+          display: block;
+        }
+      }
 
       &.has-loaded {
         opacity: 1;
