--- a/content/themes/dude/sass/modules/_blog-big.scss
+++ b/content/themes/dude/sass/modules/_blog-big.scss
@@ -17,6 +17,16 @@
   .cols {
     @include grid(2, $gutter_x: 0, $gutter_y: 0);
 
+    @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+      display: flex;
+      flex-wrap: nowrap;
+    }
+
+    @supports (-ms-ime-align: auto) {
+      display: flex;
+      flex-wrap: nowrap;
+    }
+
     @media (max-width: 900px) {
       display: flex;
       flex-wrap: wrap;
@@ -30,6 +40,28 @@
 
         @media (max-width: $container-mobile) {
           height: 35rem;
+        }
+      }
+    }
+
+    @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+      .col.col-image,
+      .col.col-content {
+        width: 50vw;
+
+        @media (max-width: 870px) {
+          width: 100vw;
+        }
+      }
+    }
+
+    @supports (-ms-ime-align: auto) {
+      .col.col-image,
+      .col.col-content {
+        width: 50vw;
+
+        @media (max-width: 870px) {
+          width: 100vw;
         }
       }
     }
